--- a/_sass/pages/_layout.scss
+++ b/_sass/pages/_layout.scss
@@ -31,7 +31,7 @@
   }
   .author_name {
     display: block;
-    color: #F36170;
+    color: #f8cc77;
     font-size: 1.75em;
     text-transform: lowercase;
   }
