--- a/_includes/sections/about.html
+++ b/_includes/sections/about.html
@@ -1,4 +1,4 @@
-<h1><span data-i18n="skills.my_skills">About</span></h1>
+<h1><span data-i18n="skills.my_skills">关于我</span></h1>
 
 <div>
 我是晴子（李晴），20届应届毕业生。我热爱读书写作，注重主题阅读和批量学习；拥有成长型心智，自学心理学、编程、数据分析；乐于合作，多次参加团队比赛和项目并担任队长；兴趣广泛，乐于尝试新鲜事物，如学习爵士舞、股票投资，既有活泼一面，也有沉稳耐心一面。在大五人格测试中，我属于高宜人性、高尽责性、低神经质的性格特点。
