--- a/_includes/sections/skills.html
+++ b/_includes/sections/skills.html
@@ -1,5 +1,5 @@
 <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.6.0/Chart.min.js"></script>
-<h1><span data-i18n="skills.my_skills">Skills</span></h1>
+<h1><span data-i18n="skills.my_skills">大五人格测试</span></h1>
 <canvas id="{{ site.data.index.skills.id }}" height="500" width="500"></canvas>    
 <script>
     var ctx = document.getElementById("{{ site.data.index.skills.id }}");
@@ -22,7 +22,7 @@
     options: {
         scale: {
             responsive: true,
-            ticks: {min: 0, max: 100},
+            ticks: {min: 0, max: 50},
             lineArc: false,
             pointLabels: {fontSize: 14},
         },
